; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_create.c_CREATE_fetch_int.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_create.c_CREATE_fetch_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tagMSIVIEW = type { i32 }

@.str = private unnamed_addr constant [13 x i8] c"%p %d %d %p\0A\00", align 1
@ERROR_FUNCTION_FAILED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tagMSIVIEW*, i32, i32, i32*)* @CREATE_fetch_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CREATE_fetch_int(%struct.tagMSIVIEW* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.tagMSIVIEW*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  store %struct.tagMSIVIEW* %0, %struct.tagMSIVIEW** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %5, align 8
  %11 = bitcast %struct.tagMSIVIEW* %10 to i32*
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %9, align 8
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* %7, align 4
  %15 = load i32*, i32** %8, align 8
  %16 = call i32 @TRACE(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0), i32* %12, i32 %13, i32 %14, i32* %15)
  %17 = load i32, i32* @ERROR_FUNCTION_FAILED, align 4
  ret i32 %17
}

declare dso_local i32 @TRACE(i8*, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
